project(UnscentedKF)

cmake_minimum_required (VERSION 3.5)

add_definitions(-std=c++11)

set(CXX_FLAGS "-Wall")
set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")

set(sources src/main.cpp src/tools.cpp src/SigmaPoints.cpp src/SigmaPoints.h src/UKF.cpp src/UKF.h src/CTRV.cpp src/CTRV.h src/Laser.cpp src/Laser.h src/Radar.cpp src/Radar.h)


if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

include_directories(/usr/local/include)
include_directories(/usr/local/opt/openssl/include)
link_directories(/usr/local/lib)
link_directories(/usr/local/opt/openssl/lib)
link_directories(/usr/local/Cellar/libuv/1*/lib)

endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")


add_executable(UnscentedKF ${sources})

target_link_libraries(UnscentedKF z ssl uv uWS)
